[gd_scene load_steps=16 format=3 uid="uid://c03n1oq28p0j0"]

[ext_resource type="Script" path="res://Scripts/slots/slots_game.gd" id="1_vdhey"]
[ext_resource type="PackedScene" uid="uid://dl20ptmkwt040" path="res://Scenes/slot/slot_animation.tscn" id="2_arwdp"]
[ext_resource type="Texture2D" uid="uid://udu8c42r8lj" path="res://Assets/random_photos/Slots_Machine.png" id="2_cfer3"]
[ext_resource type="Texture2D" uid="uid://cjd3ff31vy68i" path="res://Assets/random_photos/seven.png" id="3_uf1h0"]
[ext_resource type="Texture2D" uid="uid://ulwc1gw0yjwr" path="res://Assets/random_photos/stock_background.jpg" id="5_o4nq3"]
[ext_resource type="Animation" uid="uid://bqhlxoy7hkgra" path="res://Assets/Animations/Menu/popup.res" id="6_163x2"]
[ext_resource type="FontFile" uid="uid://c4c4re1prp0j5" path="res://Assets/Fonts/Summer Break.otf" id="7_ykxap"]
[ext_resource type="PackedScene" uid="uid://dfaxoa3wsgmy6" path="res://Scenes/horse/horse_race_winnings.tscn" id="8_3btjs"]

[sub_resource type="LabelSettings" id="LabelSettings_ihyam"]
font = ExtResource("7_ykxap")
font_size = 75

[sub_resource type="Animation" id="Animation_8mnos"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_be80x"]
_data = {
"RESET": SubResource("Animation_8mnos"),
"popup": ExtResource("6_163x2")
}

[sub_resource type="LabelSettings" id="LabelSettings_y3s3m"]
font = ExtResource("7_ykxap")
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_mfsqt"]
font = ExtResource("7_ykxap")
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_q8hwr"]
font = ExtResource("7_ykxap")
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_ipj8m"]
font = ExtResource("7_ykxap")
font_size = 75

[node name="Slots_Game" type="Node2D"]
script = ExtResource("1_vdhey")
slot_spin_time = 1.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 354.0
offset_top = 222.0
offset_right = 778.0
offset_bottom = 488.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -15.0
anchor_top = -5.467
anchor_right = 17.917
anchor_bottom = 6.4
offset_left = 6356.0
offset_top = 1454.22
offset_right = -7189.81
offset_bottom = -1517.4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 3.00195
offset_bottom = 184.0
grow_horizontal = 2

[node name="Results" type="Node" parent="Control/Panel/HBoxContainer"]

[node name="Slot_pic" type="Sprite2D" parent="Control/Panel/HBoxContainer/Results"]
visible = false
position = Vector2(417, 306.998)
texture = ExtResource("3_uf1h0")

[node name="Slot2_pic" type="Sprite2D" parent="Control/Panel/HBoxContainer/Results"]
visible = false
position = Vector2(558, 306.998)
texture = ExtResource("3_uf1h0")

[node name="Slot3_pic" type="Sprite2D" parent="Control/Panel/HBoxContainer/Results"]
visible = false
position = Vector2(694, 306.998)
texture = ExtResource("3_uf1h0")

[node name="Animation" type="Node" parent="Control/Panel/HBoxContainer"]

[node name="Slot" parent="Control/Panel/HBoxContainer/Animation" instance=ExtResource("2_arwdp")]
position = Vector2(417, 306.998)

[node name="Slot2" parent="Control/Panel/HBoxContainer/Animation" instance=ExtResource("2_arwdp")]
position = Vector2(558, 306.998)

[node name="Slot3" parent="Control/Panel/HBoxContainer/Animation" instance=ExtResource("2_arwdp")]
position = Vector2(694, 306.998)

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 59.0
offset_top = 220.0
offset_right = 340.0
offset_bottom = 272.0
text = "Play Again"

[node name="Spins_Count" type="Label" parent="Control"]
layout_mode = 0
offset_left = -321.0
offset_top = 332.0
offset_right = -137.0
offset_bottom = 400.0
text = "SPINS: 3"
label_settings = SubResource("LabelSettings_ihyam")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(571, 311)
scale = Vector2(1.38262, 1.17088)
texture = ExtResource("2_cfer3")

[node name="background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(579.5, 328)
scale = Vector2(2.16852, 1.87222)
texture = ExtResource("5_o4nq3")

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -1
color = Color(0, 0.926264, 0.666158, 1)
polygon = PackedVector2Array(348, 223, 349, 405, 433, 409, 432, 491, 680, 490, 679, 409, 770, 407, 771, 207, 423.962, 206.185, 345, 206)

[node name="WinPanel" type="Panel" parent="."]
visible = false
z_index = 1
offset_left = 96.0
offset_top = 16.0
offset_right = 1056.0
offset_bottom = 624.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="WinPanel"]
libraries = {
"": SubResource("AnimationLibrary_be80x")
}

[node name="HBoxContainer" type="VBoxContainer" parent="WinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -310.5
offset_right = 575.0
offset_bottom = 310.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="WinPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
text = "HELLO"
label_settings = SubResource("LabelSettings_y3s3m")
horizontal_alignment = 1

[node name="Winnings" parent="WinPanel/HBoxContainer" instance=ExtResource("8_3btjs")]
layout_mode = 2
text = "YOU WIN: $"
label_settings = SubResource("LabelSettings_mfsqt")

[node name="Results" type="Label" parent="WinPanel/HBoxContainer"]
layout_mode = 2
text = "
"
label_settings = SubResource("LabelSettings_q8hwr")
horizontal_alignment = 1

[node name="Return" type="Label" parent="WinPanel/HBoxContainer"]
layout_mode = 2
text = "
"
label_settings = SubResource("LabelSettings_ipj8m")
horizontal_alignment = 1

[node name="FinishTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="FreezePanel" type="Panel" parent="."]
visible = false
offset_left = 217.0
offset_top = 93.0
offset_right = 966.0
offset_bottom = 518.0

[node name="Button1" type="Button" parent="FreezePanel"]
z_index = 1
layout_mode = 0
offset_left = 130.0
offset_top = 131.0
offset_right = 264.0
offset_bottom = 315.0

[node name="Button2" type="Button" parent="FreezePanel"]
z_index = 1
offset_left = 407.0
offset_top = 128.0
offset_right = 541.0
offset_bottom = 312.0

[node name="Button3" type="Button" parent="FreezePanel"]
z_index = 1
offset_left = 273.0
offset_top = 128.0
offset_right = 407.0
offset_bottom = 312.0

[node name="Label" type="Label" parent="FreezePanel"]
layout_mode = 0
offset_left = 122.0
offset_top = 54.0
offset_right = 543.0
offset_bottom = 113.0
text = "You used Freeze Slot 
Click slot to freeze."

[connection signal="pressed" from="Control/Button" to="." method="_on_Replay_pressed"]
[connection signal="animation_finished" from="WinPanel/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="FinishTimer" to="." method="_on_finish_timer_timeout"]
[connection signal="pressed" from="FreezePanel/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="FreezePanel/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="FreezePanel/Button3" to="." method="_on_button_3_pressed"]
